--- a/src/component/weathercomponent/weather.css
+++ b/src/component/weathercomponent/weather.css
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    
+    font-family: calibri;
     background-color:#B15EFF;
 }
 .header{
